--- a/Assets/WebGLTemplates/template/index.html
+++ b/Assets/WebGLTemplates/template/index.html
@@ -482,6 +482,50 @@
       </li>
     </ul>
   </div>
+  <div>
+    <h2>Contributions</h2>
+    <p>
+      Our team was able to divide and conquer the work in a way that allowed us to work on our strengths and learn from
+      each other. Here are the main contributions of each team member:</p>
+      <ul>
+        <li>
+          <b>Akhror Rakhmatov:</b>
+          <p>
+            "I worked on"
+          </p>
+        </li>
+        <li>
+          <b>Daniel Do</b>
+          <p>
+            "I worked on"
+          </p>
+        </li>
+        <li>
+          <b>Ernani Raffo</b>
+          <p>
+            "I worked on"
+          </p>
+        </li>
+        <li>
+          <b>Jentsen Maniti</b>
+          <p>
+            "I worked on"
+          </p>
+        </li>
+        <li>
+          <b>Jordan Reavis</b>
+          <p>
+            "I worked on"
+          </p>
+        </li>
+        <li>
+          <b>Lukas Licon</b>
+          <p>
+            "I worked on"
+          </p>
+        </li>
+      </ul>
+  </div>
 </body>
 
 </html>
