pushing puzzle 1 because arabic font got messed up

--- a/Assets/WebGLTemplates/template/index.html
+++ b/Assets/WebGLTemplates/template/index.html
@@ -491,44 +491,51 @@
     <p>
       Our team was able to divide and conquer the work in a way that allowed us to work on our strengths and learn from
       each other. Here are the main contributions of each team member:</p>
-    <ul>
-      <li>
-        <b>Akhror Rakhmatov:</b>
-        <p>
-          "I worked on"
-        </p>
-      </li>
-      <li>
-        <b>Daniel Do</b>
-        <p>
-          "I worked on"
-        </p>
-      </li>
-      <li>
-        <b>Ernani Raffo</b>
-        <p>
-          "I worked on"
-        </p>
-      </li>
-      <li>
-        <b>Jentsen Maniti</b>
-        <p>
-          "I worked on"
-        </p>
-      </li>
-      <li>
-        <b>Jordan Reavis</b>
-        <p>
-          "I worked on"
-        </p>
-      </li>
-      <li>
-        <b>Lukas Licon</b>
-        <p>
-          "I worked on"
-        </p>
-      </li>
-    </ul>
+      <ul>
+        <li>
+          <b>Akhror Rakhmatov:</b>
+          <p>
+            "I worked on the main menu, options menu, some of the sound as well as the background music. 
+            I was able to create the background music from scratch using Native Access's Maschine DAW. 
+            The main menu was created with the intention of making a menu that's not too basic and fits into the 
+            same theme and genre that the game is played in. The options menu continues on from that same menu."
+          </p>
+        </li>
+        <li>
+          <b>Daniel Do</b>
+          <p>
+            "I worked on"
+          </p>
+        </li>
+        <li>
+          <b>Ernani Raffo</b>
+          <p>
+            "I worked on the camera rotation mechanic and contributed to prototyping player movement. 
+            I contributed into the deployment process of our game, as we wanted an easy way 
+            to automatically create builds through Github actions that published the game on our site.  
+            I also contributed in level design, specifically levels 2 and 3, to create a fun experience for the player. 
+            Lastly, I worked on integrating Unity’s Localization Tool to make the game playable in both English and Arabic."
+          </p>
+        </li>
+        <li>
+          <b>Jentsen Maniti</b>
+          <p>
+            "I worked on"
+          </p>
+        </li>
+        <li>
+          <b>Jordan Reavis</b>
+          <p>
+            "I worked on"
+          </p>
+        </li>
+        <li>
+          <b>Lukas Licon</b>
+          <p>
+            "I worked on"
+          </p>
+        </li>
+      </ul>
   </div>
 </body>
 
