temporary location for youtube link

--- a/Assets/WebGLTemplates/template/index.html
+++ b/Assets/WebGLTemplates/template/index.html
@@ -38,6 +38,13 @@
   </div>
 
   <div>
+    <h2>Crabity Trailer</h2>
+    <p>Below is the trailer for our Vertical Slice and upcoming CMPM 172 game: Crabity!</p>
+
+    <iframe></iframe>
+  </div>
+
+  <div>
     <h2>Download</h2>
     <p>The game is available to download for macOS Intel-64bit, macOS Silicon, and Windows 64-bit computers at the
       link: <a href="https://github.com/Jentsen/Crabity/releases">Crabity releases</a>. <b>Please download the zip file from
