added work to index.html

--- a/Assets/WebGLTemplates/template/index.html
+++ b/Assets/WebGLTemplates/template/index.html
@@ -532,7 +532,16 @@
       <li>
         <b>Jentsen Maniti</b>
         <p>
-          "I worked on"
+          "I was the Co-Design lead as well as the Production lead! For level design, I was able to work on level 1 but I 
+          primarily handled the game's core mechanics, such as the gravity shifting, restricted side-to-side and situational 
+          up and down movement, as well as reworking the camera rotation to prevent motion sickness. Also, with the use of a 
+          few simple mathematical equations, I was able to get the movement feeling snappy and responsive. Furthermore, I 
+          implemented the fading object shader that our game uses to allow the player to be seen inside the level. I also 
+          worked on a large bulk of the game's debugging. For production, I made sure that our team stayed on track by implementing 
+          Notion into our work. This allowed us to easily keep track of what was being worked on and who was working on what. 
+          After listening to player's feedback during playtests, I helped alleviate confusion by adding a minimap to indicate level 
+          orientation. Lastly, I was largely responsible for maintaining the aesthetic of the game by importing assets and creating 
+          the environment and narrative."
         </p>
       </li>
       <li>
