added work to index.html

--- a/Assets/WebGLTemplates/template/index.html
+++ b/Assets/WebGLTemplates/template/index.html
@@ -488,7 +488,7 @@
         </p>
         <img src="assets/gifs/jentsen_3.gif" alt="Jentsen Prototype 3" width="500">
         <p>
-          But there was bound to be a few bugs while we were developing the game.
+          But there were bound to be a few bugs while we were developing the game.
         </p>
         <img src="assets/gifs/rotation_bug.gif" alt="Jentsen Prototype 2" width="500">
       </li>
@@ -539,16 +539,16 @@
       <li>
         <b>Jentsen Maniti</b>
         <p>
-          "I was the Co-Design lead as well as the Production lead! For level design, I was able to work on level 1 but I 
-          primarily handled the game's core mechanics, such as the gravity shifting, restricted side-to-side and situational 
-          up and down movement, as well as reworking the camera rotation to prevent motion sickness. Also, with the use of a 
-          few simple mathematical equations, I was able to get the movement feeling snappy and responsive. Furthermore, I 
-          implemented the fading object shader that our game uses to allow the player to be seen inside the level. I also 
-          worked on a large bulk of the game's debugging. For production, I made sure that our team stayed on track by implementing 
-          Notion into our work. This allowed us to easily keep track of what was being worked on and who was working on what. 
-          After listening to player's feedback during playtests, I helped alleviate confusion by adding a minimap to indicate level 
-          orientation. Lastly, I was largely responsible for maintaining the aesthetic of the game by importing assets and creating 
-          the environment and narrative."
+          "I was the Co-Design Lead as well as the Production Lead! For level design, I worked on Level 1, but my 
+          primary focus was on the game's core mechanics, such as gravity shifting, restricted side-to-side and 
+          situational up and down movement, as well as reworking the camera rotation to prevent motion sickness. 
+          Additionally, with the use of a few simple mathematical equations, I was able to make the movement feel 
+          snappy and responsive. Furthermore, I implemented the fading object shader that our game uses to allow players 
+          to see inside the level. I also worked on a large portion of the game's debugging. For production, I ensured 
+          that our team stayed on track by implementing Notion into our workflow. This allowed us to easily keep track of 
+          what was being worked on and by whom. After listening to players' feedback during playtests, I helped alleviate 
+          confusion by adding a minimap to indicate level orientation. Lastly, I was largely responsible for maintaining 
+          the aesthetic of the game by importing assets and creating the environment and narrative."
         </p>
       </li>
       <li>
