--- a/Assets/WebGLTemplates/template/index.html
+++ b/Assets/WebGLTemplates/template/index.html
@@ -38,13 +38,6 @@
   </div>
 
   <div>
-    <h2>Crabity Trailer</h2>
-    <p>Below is the trailer for our Vertical Slice and upcoming CMPM 172 game: Crabity!</p>
-
-    <iframe></iframe>
-  </div>
-
-  <div>
     <h2>Download</h2>
     <p>The game is available to download for macOS Intel-64bit, macOS Silicon, and Windows 64-bit computers at the
       link: <a href="https://github.com/Jentsen/Crabity/releases">Crabity releases</a>. <b>Please download the zip file from
@@ -52,6 +45,19 @@
       </b>
       The latest release will have a green logo marked as "Latest". Lastly, uncompress the downloaded file and play the game!
     </p>
+  </div>
+
+  <div>
+    <h2>Crabity Trailer</h2>
+    <p>Below is the trailer for our Vertical Slice and upcoming CMPM 172 game: Crabity!</p>
+
+    <p></p>
+    <a href="https://www.youtube.com/watch?v=Z-HiUq3p5Ek">Crabity Trailer</a>
+
+    <p></p>
+    <iframe width="420" height="315"
+      src="https://www.youtube.com/embed/watch?v=Z-HiUq3p5Ek">
+    </iframe>
   </div>
 
   <div id="unity-container" class="unity-desktop">
@@ -100,7 +106,7 @@
       if (type == 'error') div.style = 'background: red; padding: 10px;';
       else {
         if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-        setTimeout(function () {
+        setTimeout(function() {
           warningBanner.removeChild(div);
           updateBannerVisibility();
         }, 5000);
@@ -127,9 +133,9 @@
 #endif
       streamingAssetsUrl: "StreamingAssets",
       companyName: {{{ JSON.stringify(COMPANY_NAME) }}},
-    productName: { { { JSON.stringify(PRODUCT_NAME) } } },
-    productVersion: { { { JSON.stringify(PRODUCT_VERSION) } } },
-    showBanner: unityShowBanner,
+      productName: {{{ JSON.stringify(PRODUCT_NAME) }}},
+      productVersion: {{{ JSON.stringify(PRODUCT_VERSION) }}},
+      showBanner: unityShowBanner,
     };
 
     // By default, Unity keeps WebGL canvas render target size matched with
@@ -178,20 +184,20 @@
     script.onload = () => {
       createUnityInstance(canvas, config, (progress) => {
         progressBarFull.style.width = 100 * progress + "%";
-      }).then((unityInstance) => {
-        loadingBar.style.display = "none";
+            }).then((unityInstance) => {
+              loadingBar.style.display = "none";
 #if SHOW_DIAGNOSTICS
-        diagnostics_icon.onclick = () => {
-          unityDiagnostics.openDiagnosticsDiv(unityInstance.GetMemoryInfo);
-        };
+              diagnostics_icon.onclick = () => {
+                unityDiagnostics.openDiagnosticsDiv(unityInstance.GetMemoryInfo);
+              };
 #endif
-        fullscreenButton.onclick = () => {
-          unityInstance.SetFullscreen(1);
-        };
-      }).catch((message) => {
-        alert(message);
-      });
-    };
+              fullscreenButton.onclick = () => {
+                unityInstance.SetFullscreen(1);
+              };
+            }).catch((message) => {
+              alert(message);
+            });
+          };
 
     document.body.appendChild(script);
 
