updating contributions section

--- a/Assets/WebGLTemplates/template/index.html
+++ b/Assets/WebGLTemplates/template/index.html
@@ -568,8 +568,12 @@
       <li>
         <b>Jordan Reavis</b>
         <p>
-          "I worked on the in-game dialogue system as well as coordinating in-class playtests of our
-          game and collecting user feedback via Google Forms"
+          "I worked on the in-game dialogue system as well as coordinating in-class playtests of Crabity, 
+          collecting and passing along user feedback collected via Google Forms to the rest of the team. 
+          Additionally, I assisted Ernani with localization efforts by ensuring the dialogue system was 
+          available in both US English as well as Arabic. I also assisted Daniel and Ernani with creating 
+          and delivering end-of-sprint presentations detailing the development status of our game throughout 
+          the quarter."
         </p>
       </li>
       <li>
